--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -7,7 +7,9 @@
     </title>
 </head>
 <body>
-<%-JSON.stringify(session)%>
+<%-JSON.stringify(session)
+%>
+<p><% if (session.logined) { %> s <% } %></p>
 <form action="/logout" method="post">
     <button type="submit">Logout</button>
 </form>
