--- a/views/firstpage.ejs
+++ b/views/firstpage.ejs
@@ -12,16 +12,22 @@
 </head>
 <body ng-app="myApp" ng-controller="MainCtrl">
 <%-JSON.stringify(session)%>
+<%-session.user_id%>
 <div class="container">
 
     <!--hide before login, -->
     <div class="pull-left">
-        <label >Welcome, !  </label>
+        <label><% if (session.logined) { %> Welcome
+            <%-session.user_id%>
+            <% }
+            %>
+        </label>
         <button class="btn btn-default ">  <a href="addEvent.html"> add trip</a> </button>
     </div>
 
-    <!--Hide after login-->
+    <% if (!session.logined) { %>
     <form class="form-inline right pull-right">
+
         <div class="form-group">
             <label for="usr">ID: </label>
             <input type="text" class="form-control" ng-model="namelogin" id="usr">
@@ -30,6 +36,22 @@
             <button type="submit" class="btn btn-default" ng-click="login()">Submit</button>
         </div>
     </form>
+    <% }
+    else{ %>
+    <div class="dropdown pull-right">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownAccount" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <%-session.user_id%>
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
+            <li><a href="#">Profile</a></li>
+            <li><a href="http://localhost:3000/logout">Logout</a></li>
+        </ul>
+    </div>
+    <%}
+    %>
+    <!--Hide after login-->
+
 
 
 </div>
@@ -41,20 +63,20 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-sm-4">
-            <img src="map.png" align="middle">
+            <img src="images/map.png" align="middle">
             <h3>Broadcast Your Trip</h3>
             <p>Have a plan for this weekend?</p>
             <p>You can now broadcast your trip plan while staying in Korea</p>
         </div>
 
         <div class="col-sm-4">
-            <img src="people.png" align="middle">
+            <img src="images/people.png" align="middle">
             <h3>Get Members</h3>
             <p>By broadcasting your event, other ICT.IDN program members who also interested can join your trip.</p>
 
         </div>
         <div class="col-sm-4">
-            <img src="road-joining.png" align="middle">
+            <img src="images/road-joining.png" align="middle">
             <h3>Join other Trip</h3>
             <p>If you're interested in joining a trip but lazy to plan go find someone who need accompany in their trip</p>
 
