--- a/views/firstpage.ejs
+++ b/views/firstpage.ejs
@@ -22,8 +22,7 @@
             <% }
             %>
         </label>
-        <button class="btn btn-default ">  <a href="addEvent.html"> add trip</a> </button>
-    </div>
+            </div>
 
     <% if (!session.logined) { %>
     <form class="form-inline right pull-right">
@@ -44,7 +43,8 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
-            <li><a href="#">Profile</a></li>
+            <li><a href="#">My Trip</a></li>
+            <li><a href="">Add Trip</a></li>
             <li><a href="http://localhost:3000/logout">Logout</a></li>
         </ul>
     </div>
