--- a/views/firstpage.ejs
+++ b/views/firstpage.ejs
@@ -17,6 +17,7 @@
 
     <!--hide before login, -->
     <div class="pull-left">
+        <button class="btn btn-default ">  <a href="#">Signup</a> </button>
         <label><% if (session.logined) { %> Welcome
             <%-session.user_id%>
             <% }
