--- a/views/showEvent.ejs
+++ b/views/showEvent.ejs
@@ -22,19 +22,19 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="gwanggyosan.PNG" alt="Chania">
+                    <img src="images/gwanggyosan.PNG" alt="Chania">
                 </div>
 
                 <div class="item">
-                    <img src="import.png" alt="Chania">
+                    <img src="images/import.png" alt="Chania">
                 </div>
 
                 <div class="item">
-                    <img src="Old_Castle_PNG_Clipart_Image.png" alt="Flower">
+                    <img src="images/Old_Castle_PNG_Clipart_Image.png" alt="Flower">
                 </div>
 
                 <div class="item">
-                    <img src="sardines%20abc.jpg" alt="Flower">
+                    <img src="images/sardines%20abc.jpg" alt="Flower">
                 </div>
             </div>
 
