--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -22,6 +22,9 @@
     <input required placeholder="Enter desired username" type="text" class="form-control" ng-model="nname" id="usr"/>
     <label for="email">Email: </label>
     <input placeholder="Enter your active email" required type="text" class="form-control" ng-model="email" id="email"/>
+    <label for="phone">P: </label>
+    <input placeholder="Enter your active email" required type="text" class="form-control" ng-model="email" id="email"/>
+
     <label for="pass">Password:</label>
 
     <input placeholder="choose your password" required type="password"class="form-control" ng-model="npassword1" id="pass">
