--- a/views/firstpage.ejs
+++ b/views/firstpage.ejs
@@ -44,9 +44,9 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
-            <li><a href="#">My Trip</a></li>
-            <li><a href="">Add Trip</a></li>
-            <li><a href="http://localhost:3000/logout">Logout</a></li>
+            <li > <a href="#">My Trip</a></li>
+            <li > <a ng-click="addTrip()" href="#">Add Trip</a></li>
+            <li ><a href="http://localhost:3000/logout">Logout</a></li>
         </ul>
     </div>
     <%}
