--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -21,12 +21,10 @@
 
     <input required placeholder="Enter desired username" type="text" class="form-control" ng-model="nname" id="usr"/>
     <label for="email">Email: </label>
-    <input placeholder="Enter your active email" required type="text" class="form-control" ng-model="email" id="email"/>
-    <label for="phone">P: </label>
-    <input placeholder="Enter your active email" required type="text" class="form-control" ng-model="email" id="email"/>
-
+    <input placeholder="Enter your active email" required type="text" class="form-control" ng-model="nemail" id="email"/>
+    <label for="phone">Phone: </label>
+    <input placeholder="Enter your active phone number" required type="text" class="form-control" ng-model="nphone" id="phonee"/>
     <label for="pass">Password:</label>
-
     <input placeholder="choose your password" required type="password"class="form-control" ng-model="npassword1" id="pass">
     <label for="cf">Confirm Password:</label>
     <input placeholder="retype your password" required type="password" class="form-control" ng-model="npassword2" id="cf" />
