--- a/views/addEvent.ejs
+++ b/views/addEvent.ejs
@@ -20,8 +20,7 @@
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
             <li > <a ng-click="login()"href="#">Home</a></li>
-            <li > <a href="#">My Trip</a></li>
-            <li > <a ng-click="addTrip()" href="#">Add Trip</a></li>
+            <li > <a ng-click="myTrip()"href="#">My Trip</a></li>
             <li ><a href="http://localhost:3000/logout">Logout</a></li>
         </ul>
     </div></div>
