--- a/views/loginFailed.ejs
+++ b/views/loginFailed.ejs
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.js"></script>
-    <script src="javascripts/failedLogin.js"></script>
+    <script src="javascripts/client1.js"></script>
 </head>
 <body ng-app="myApp" ng-controller="MainCtrl">
 
