--- a/views/myTrips.ejs
+++ b/views/myTrips.ejs
@@ -50,8 +50,8 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
-            <li > <a ng-click="myTrip()"href="#">My Trip</a></li>
-            <li > <a ng-click="addTrip()" href="#">Add Trip</a></li>
+            <li > <a ng-click="myTrip()">My Trip</a></li>
+            <li > <a ng-click="addTrip()">Add Trip</a></li>
             <li ><a href="http://localhost:3000/logout">Logout</a></li>
         </ul>
     </div>
