--- a/views/showEvent.ejs
+++ b/views/showEvent.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="javascripts/showEvents.js"></script>
+    <script src="javascripts/showevents.js"></script>
 </head>
 <body><div class="pull-left">
     <label >Welcome, !  </label>
@@ -63,6 +63,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+
     <label>Description:</label>
         <br/>
     <textarea rows="5" class="form-control"><%-data[0].description%></textarea>
@@ -82,8 +83,8 @@
     </table>
         <form class="form-inline right pull-right">
             <div class="form-group">
-                <button type="submit" class="btn btn-default" onclick="login()">Back</button>
-                <button type="submit" class="btn btn-default" onclick="join()">Join</button>
+                <button type="submit" class="btn btn-warning" onclick="login()">Back</button>
+                <button type="submit" class="btn btn-success" onclick="join()">Join</button>
 
             </div>
             </form>
