--- a/views/loginFailed.ejs
+++ b/views/loginFailed.ejs
@@ -30,7 +30,7 @@
         </script>
         <input type="text" ng-model="namelogin" class="form-control" id="usr">
         <label for="pwd">Password:</label>
-        <input type="password" ng-model="passlogin" class="form-control" id="pwd" >
+        <input type="password" ng-model="passlogin" class="form-control" id="pwd" ><br>
         <button type="submit" class=" form-control btn btn-default" ng-click="login()">submit</button>
     </div>
 </form>
