--- a/views/editEvent.ejs
+++ b/views/editEvent.ejs
@@ -24,9 +24,11 @@
             <li ><a href="http://localhost:3000/logout">Logout</a></li>
         </ul>
     </div></div>
-<div class="jumbotron text-left ">
-    <h1> Tripster</h1>
-    <p> our travel partner</p>
+<div class="jumbotron text-center ">
+    <a href="http://localhost:3000" style="text-decoration: none; color:inherit">
+        <h1> Tripster</h1>
+        <p> our travel partner</p>
+    </a>
 </div>
 
 <div class="container">
