--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -11,9 +11,11 @@
 
 </head>
 <body ng-app="myApp" ng-controller="MainCtrl">
-<div class="jumbotron text-left ">
-    <h1> Tripster</h1>
-    <p> our travel partner</p>
+<div class="jumbotron text-center ">
+    <a href="http://localhost:3000" style="text-decoration: none; color:inherit">
+        <h1> Tripster</h1>
+        <p> our travel partner</p>
+    </a>
 </div>
 
 <div class="container">
