--- a/views/loginFailed.ejs
+++ b/views/loginFailed.ejs
@@ -13,8 +13,10 @@
 
 
 <div class="jumbotron text-center ">
-    <h1> Tripster</h1>
-    <p> our travel partner</p>
+    <a href="http://localhost:3000" style="text-decoration: none; color:inherit">
+        <h1> Tripster</h1>
+        <p> our travel partner</p>
+    </a>
 </div>
 
 <div class="row">
