--- a/views/myTrips.ejs
+++ b/views/myTrips.ejs
@@ -64,8 +64,10 @@
 </div>
 
 <div class="jumbotron text-center ">
-    <h1> Tripster</h1>
-    <p> our travel partner</p>
+    <a href="http://localhost:3000" style="text-decoration: none; color:inherit">
+        <h1> Tripster</h1>
+        <p> our travel partner</p>
+    </a>
 </div>
 <div class="container">
     <h3>My Trips</h3>
